Shows page finished

--- a/styles/partials/_desktopBreakpoint.scss
+++ b/styles/partials/_desktopBreakpoint.scss
@@ -45,12 +45,12 @@ body {
         padding-left: 1rem; /*16px */
         padding-right: 3.5rem;
         justify-content: center;
-        padding-top: 1rem;
+        padding-top: 2rem;
     }
 
     .nav__text--container2 {
         justify-content: center;
-        padding-top: 1rem;
+        padding-top: 2rem;
         border-bottom:  .3rem solid map-get($colors, cta__text--active);
     }
 
@@ -548,14 +548,17 @@ body {
         display: flex;
         order: 3;
         right: 0;
-        margin-left: 4rem;
         position: sticky;
         float: right;
         padding: 2.25rem;
         height: max-content;
         width: max-content;
-        margin-right: 9rem;
+        //margin-right: 25rem;
+        margin-left: 15rem;
         padding-top: 3rem;
+        width: 28rem;
+        justify-content: flex-end;
+        float: right;
     }
 
     .site__logo {
