Look at editing the tablet breakpoint for the foot maybe put the both the nav and footer in a partial?

--- a/styles/partials/_desktopBreakpoint.scss
+++ b/styles/partials/_desktopBreakpoint.scss
@@ -549,14 +549,15 @@ body {
         order: 3;
         right: 0;
         position: sticky;
-        float: right;
         padding: 2.25rem;
         height: max-content;
         width: max-content;
         //margin-right: 25rem;
-        margin-left: 15rem;
+        margin-left: 12rem;
+        margin-right: 3rem;
         padding-top: 3rem;
-        width: 28rem;
+        width: 30rem;
+        height: fit-content;
         justify-content: flex-end;
         float: right;
     }
