Pretty much finished

--- a/styles/shows.css
+++ b/styles/shows.css
@@ -60,24 +60,29 @@ body {
     width: 100vw;
   }
   .hero__img--container {
-    position: relative;
     text-align: center;
     color: #FFFFFF;
-    background-image: url(../assets/Images/hero-bio.jpg);
+    background-image: url(../assets/Images/hero-shows.jpg);
     background-size: cover;
-    height: 65vh;
-    width: 100vw;
-    overflow: hidden;
+    height: 100vh;
     display: flex;
     flex-direction: row;
+  }
+  .hero__img--container img {
+    max-width: 100%;
+    height: auto;
+    width: auto;
   }
   .hero__img--container h1 {
     position: absolute;
     font-size: 3.75rem; /* 60px */
     line-height: 4.25rem;
     font-weight: 600;
-    padding: 3rem;
-    order: 1;
+    order: 2;
+    margin-left: auto;
+    margin-right: auto;
+    top: 50%;
+    padding-left: 10rem;
   }
   .hero__img--container h3 {
     align-self: flex-start;
@@ -85,28 +90,33 @@ body {
     font-size: 1.5rem;
     line-height: 2.75rem;
     font-weight: 600;
-    order: 0;
+    order: 1;
     padding: 3rem;
     margin-left: 120px;
+    top: 35%;
   }
   .hero__opaque--filter {
     position: absolute;
     background-color: #323232;
     opacity: 50%;
-    height: 100%;
+    height: 100vh;
     width: 100%;
   }
   .soundcloud__container {
-    width: 60%;
+    width: 40%;
     height: 20%;
     position: absolute;
-    top: 60%;
+    top: 50%;
     padding-left: 3rem;
     padding-right: 3rem;
-    order: 2;
+    order: 3;
+    margin-left: auto;
+    margin-right: auto;
+    left: 50%;
   }
   .soundcloud__container iframe {
-    width: 50%;
+    width: 100%;
+    height: 100%;
   }
   /* HERO SECTION */
   /*ABOUT SECTION */
@@ -228,6 +238,13 @@ body {
     table-layout: fixed;
     border-collapse: collapse;
   }
+  .show__table tr:hover {
+    background-color: #FAFAFA;
+    cursor: pointer;
+  }
+  .show__table tr:hover:active {
+    background-color: #FAFAFA;
+  }
   .shows__section h1 {
     font-size: 3.75rem; /* 60px */
     line-height: 4.25rem; /* 68px */
@@ -275,12 +292,20 @@ body {
     border-radius: 0.25rem; /*4px*/
     border: none;
     font-weight: 800;
+    cursor: pointer;
+  }
+  .ticket__buy--button:hover {
+    background-color: #000000;
   }
   /*Shows Section */
   /*comment section*/
   .add__comment {
     display: flex;
     justify-content: center;
+    width: 40rem;
+    margin-left: auto;
+    margin-right: auto;
+    border-bottom: 1px solid #E1E1E1;
   }
   .add__comment p {
     margin-bottom: 4px;
@@ -317,6 +342,7 @@ body {
     border: 1px solid #E1E1E1;
     padding: 1rem;
     box-sizing: border-box;
+    background-color: #FAFAFA;
   }
   .form__username:active, .form__username:focus {
     border: 1px solid #323232;
@@ -333,6 +359,7 @@ body {
     border-radius: 4px;
     padding: 1rem;
     box-sizing: border-box;
+    background-color: #FAFAFA;
   }
   .comment__textbox:active, .comment__textbox:focus {
     border: 1px solid #323232;
@@ -352,6 +379,17 @@ body {
     margin-bottom: 1rem;
     border-radius: 4px;
     float: right;
+    font-weight: 600;
+  }
+  .comment__button:hover {
+    background-color: #000000;
+  }
+  .comment__content {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: flex-start;
+    flex-direction: row;
+    height: 8rem;
   }
   .user__icon--blank {
     background-color: #E1E1E1;
@@ -360,24 +398,62 @@ body {
     width: 48px;
     height: 48px;
     margin: 0;
-    order: 0;
-    margin-top: 2rem;
+    order: 1;
     box-sizing: border-box;
+    position: relative;
+    top: 2.25rem;
   }
   .comment__card {
     display: flex;
     flex-direction: column;
     margin: 0;
     width: 33rem;
-    padding: 3rem;
-    margin-right: 0;
-    height: 50vh;
+    padding-left: 3rem;
+    padding-right: 3rem;
+    margin-right: auto;
+    margin-left: auto;
+    height: 30rem;
+  }
+  .comment__card--item {
+    border-bottom: 1px solid #E1E1E1;
+    padding-bottom: 1.25rem;
   }
   .saved__comment--container {
     width: 100%;
     margin: 0;
     align-self: center;
     justify-self: center;
+  }
+  .user__name {
+    order: 2;
+    margin: 0;
+    font-size: 0.875rem;
+    line-height: 1.125rem;
+    padding-left: 1rem;
+    width: 12rem;
+    height: 2rem;
+    padding-top: 2.25rem;
+  }
+  .timestamp {
+    flex: 2 1 auto;
+    text-align: right;
+    width: 4rem;
+    height: 1rem;
+    color: #AFAFAF;
+    font-size: 0.875rem; /*13px*/
+    float: right;
+    order: 3;
+    margin: 0;
+    font-weight: 400;
+    line-height: 18px;
+    position: relative;
+    padding-top: 2.25rem;
+  }
+  .comment__text {
+    padding-left: 4rem;
+    order: 4;
+    margin: 0;
+    font-weight: 400;
   }
   /*comment section*/
   /*footer section */
@@ -392,7 +468,7 @@ body {
     flex-direction: row;
     height: 32rem;
     justify-content: space-between;
-    margin: auto;
+    width: 100%;
   }
   .footer__container h1 {
     color: #FFFFFF;
@@ -412,6 +488,7 @@ body {
     height: 32px;
     width: 192px;
     padding-top: 3rem;
+    padding-left: 9rem;
   }
   .footer__socialicons img {
     align-items: center;
@@ -428,8 +505,8 @@ body {
     height: max-content;
     width: -moz-max-content;
     width: max-content;
-    margin-left: 12rem;
-    margin-right: 3rem;
+    margin-left: 6rem;
+    margin-right: 1rem;
     padding-top: 3rem;
     width: 30rem;
     height: -moz-fit-content;
@@ -625,10 +702,15 @@ body {
     background-image: url(../assets/Images/hero-shows.jpg);
     background-size: cover;
     height: 65vh;
-    width: 100vw;
+    width: 100%;
     overflow: hidden;
     display: flex;
     flex-direction: column;
+  }
+  .hero__img--container img {
+    max-width: 100%;
+    height: auto;
+    width: auto;
   }
   .hero__img--container h1 {
     position: absolute;
@@ -751,6 +833,7 @@ body {
     border: 1px solid #E1E1E1;
     padding: 1rem;
     box-sizing: border-box;
+    background-color: #FAFAFA;
   }
   .form__username:active, .form__username:focus {
     border: 1px solid #323232;
@@ -784,18 +867,23 @@ body {
     height: 48px;
     margin: 0;
     order: 1;
-    margin-top: 2rem;
+    position: relative;
+    top: 1rem;
   }
   .comment__textbox {
     width: 100%;
     border: 1px solid #E1E1E1;
     padding: 1rem;
     box-sizing: border-box;
+    background-color: #FAFAFA;
   }
   .comment__textbox:active, .comment__textbox:focus {
     border: 1px solid #323232;
     outline: none;
     background-color: #ffffff;
+  }
+  .comment__textbox:invalid {
+    border: 1px solid red;
   }
   .comment__textbox:invalid {
     border: 1px solid red;
@@ -810,6 +898,8 @@ body {
     margin-bottom: 1rem;
     border-radius: 4px;
     float: right;
+    font-weight: 600;
+    cursor: pointer;
   }
   .comment__button:hover {
     background-color: #000000;
@@ -819,12 +909,15 @@ body {
     order: 4;
     padding-bottom: 1rem;
     margin: 0;
+    font-weight: 400;
   }
   .user__name {
     margin: 0;
-    padding-top: 3rem;
+    padding-top: 1rem;
     padding-left: 1rem;
     order: 2;
+    font-size: 0.875rem;
+    line-height: 1.125rem;
   }
   .timestamp {
     flex: 2 1 auto;
@@ -832,11 +925,13 @@ body {
     width: 2rem;
     height: 2rem;
     color: #AFAFAF;
-    font-size: 0.813rem; /*13px*/
-    padding-top: 3rem;
+    font-size: 0.875rem; /*13px*/
+    padding-top: 1rem;
     float: right;
     order: 3;
     margin: 0;
+    font-weight: 400;
+    line-height: 18px;
   }
   /*comment section*/
   /* SHOWS Section */
@@ -853,6 +948,13 @@ body {
     width: 100%;
     table-layout: fixed;
     border-collapse: collapse;
+  }
+  .show__table tr:hover {
+    background-color: #FAFAFA;
+    cursor: pointer;
+  }
+  .show__table tr:hover:active {
+    background-color: #FAFAFA;
   }
   .shows__section h1 {
     font-size: 3.75rem; /* 60px */
@@ -881,6 +983,10 @@ body {
     border-radius: 0.25rem; /*4px*/
     border: none;
     font-weight: 800;
+    cursor: pointer;
+  }
+  .ticket__buy--button:hover {
+    background-color: #000000;
   }
   .shows__table--row {
     border-bottom: 1px solid #E1E1E1;
@@ -1244,6 +1350,9 @@ body {
     width: 100%;
     border-radius: 0.25rem; /*4px*/
     border: none;
+  }
+  .ticket__buy--button:hover {
+    background-color: #000000;
   }
   /*shows section*/
   .footer__container {
