--- a/styles/partials/_desktopBreakpoint.scss
+++ b/styles/partials/_desktopBreakpoint.scss
@@ -79,18 +79,24 @@ body {
     }
     
     .hero__img--container {
-        position: relative;
+        //position: relative;
         text-align: center;
         color: map-get($colors , cta__text--active );
-        background-image: url(../assets/Images/hero-bio.jpg);
+        background-image: url(../assets/Images/hero-shows.jpg);
         background-size:cover;
-        height: 65vh;
-        width: 100vw;
-        overflow: hidden;
+        height: 100vh;
+        //width: 100vw;
+        //overflow: hidden;
         display: flex;
         flex-direction: row;
         // justify-content: center;
         // align-items: center;
+    }
+
+    .hero__img--container img {
+        max-width: 100%;
+        height: auto;
+        width: auto;
     }
 
     .hero__img--container h1 {
@@ -99,8 +105,11 @@ body {
         font-size: 3.75rem; /* 60px */
         line-height: 4.25rem;
         font-weight: 600;
-        padding: 3rem;
-        order: 1;
+        order: 2;
+        margin-left: auto;
+        margin-right: auto;
+        top: 50%;
+        padding-left: 10rem;
     }
 
     .hero__img--container h3 {
@@ -109,32 +118,37 @@ body {
         font-size: 1.5rem;
         line-height: 2.75rem;
         font-weight:600;
-        order:0;
+        order:1;
         padding: 3rem;
         margin-left: 120px;
+        top: 35%;
     }
 
     .hero__opaque--filter {
         position: absolute ;
         background-color: #323232;
         opacity: 50%;
-        height: 100%;
+        height: 100vh;
         width: 100%;
     }
 
 
     .soundcloud__container {
-        width: 60%;
+        width: 40%;
         height: 20%;
         position:absolute;
-        top: 60%;
+        top: 50%;
         padding-left: 3rem;
         padding-right: 3rem;
-        order:2;
+        order:3;
+        margin-left: auto;
+        margin-right: auto;
+        left: 50%;
     }
 
     .soundcloud__container iframe {
-        width:50%
+        width:100%;
+        height:100%;
     }
     /* HERO SECTION */
 
@@ -285,6 +299,14 @@ body {
         border-collapse: collapse;
     }
 
+    .show__table tr:hover {
+        background-color: map-get($colors , bg__alt--col );
+        cursor: pointer;
+        &:active {
+            background-color: map-get($colors , bg__alt--col );
+        }
+    }
+
     .shows__section h1 {
         font-size: 3.75rem; /* 60px */
         line-height: 4.25rem; /* 68px */ 
@@ -339,6 +361,12 @@ body {
         border-radius: 0.25rem; /*4px*/
         border: none;
         font-weight: 800;
+        cursor: pointer;
+
+        
+        &:hover {
+            background-color: #000000;
+        }
     }
                                          
 
@@ -357,7 +385,10 @@ body {
     .add__comment {
         display: flex;
         justify-content: center;
-        // width: 5rem;
+        width: 40rem;
+        margin-left: auto;
+        margin-right: auto;
+        border-bottom: 1px solid map-get($colors, divider__line);
     }
 
     .add__comment p {
@@ -403,8 +434,9 @@ body {
         border: 1px solid map-get($colors, divider__line );
         padding: 1rem;
         box-sizing: border-box;
+        background-color:  map-get($colors , bg__alt--col);
 
-        &:active, &:focus { // I think you said you wanted focus as well
+        &:active, &:focus { 
             border: 1px solid map-get($colors , bandSite__black );
             outline: none; // add this
             background-color: #ffffff;
@@ -415,7 +447,7 @@ body {
           }
     }
 
-
+    
     .comment__textbox {
         width: 100%;
         border: 1px solid map-get($colors, divider__line );
@@ -423,8 +455,9 @@ body {
         border-radius: 4px;
         padding: 1rem;
         box-sizing: border-box;
+        background-color:  map-get($colors , bg__alt--col);
 
-        &:active, &:focus { // I think you said you wanted focus as well
+        &:active, &:focus { 
             border: 1px solid map-get($colors , bandSite__black );
             outline: none; // add this
             background-color: #ffffff;
@@ -446,8 +479,20 @@ body {
         margin-bottom: 1rem;
         border-radius: 4px;
         float: right;
+        font-weight: 600;
+
+        &:hover {
+            background-color: #000000;
+        }
     }
 
+    .comment__content {
+        display: flex;
+        flex-wrap: wrap;
+        justify-content: flex-start;
+        flex-direction: row;
+        height: 8rem;
+    }
 
     .user__icon--blank {
         background-color: #E1E1E1;
@@ -456,9 +501,10 @@ body {
         width: 48px;
         height: 48px;
         margin: 0;
-        order: 0;
-        margin-top:2rem;
+        order: 1;
         box-sizing: border-box;
+        position: relative;
+        top: 2.25rem;
     }
 
     .comment__card {
@@ -466,10 +512,17 @@ body {
         flex-direction: column;
         margin: 0;
         width: 33rem;
-        padding: 3rem;
-        margin-right: 0;
-        height: 50vh;
+        padding-left: 3rem;
+        padding-right: 3rem;
+        margin-right: auto;
+        margin-left: auto;
+        height: 30rem;
         
+    }
+
+    .comment__card--item {
+        border-bottom: 1px solid map-get($colors, divider__line);
+        padding-bottom: 1.25rem;
     }
 
     .saved__comment--container {
@@ -477,6 +530,41 @@ body {
         margin: 0;
         align-self: center;
         justify-self: center;
+    }
+
+    .user__name {
+        order: 2;
+        margin: 0;
+        font-size: 0.875rem;
+        line-height: 1.125rem;
+        padding-left: 1rem;
+        width: 12rem;
+        height: 2rem;
+        padding-top: 2.25rem;
+    }
+
+    .timestamp {
+        flex: 2 1 auto;
+        text-align: right;
+        width: 4rem;
+        height: 1rem;
+        color: map-get($colors, cta__text--col);
+        font-size: 0.875rem; /*13px*/
+        float: right;
+        order: 3;
+        margin: 0;
+        font-weight: 400;
+        line-height: 18px;
+        position: relative;
+        padding-top: 2.25rem;
+    }
+
+    .comment__text {
+        padding-left: 4rem;
+        order: 4;
+        margin: 0;
+        font-weight: 400;
+        
     }
 
 
@@ -515,7 +603,8 @@ body {
         height: 32rem;
         // align-content: flex-start;
         justify-content: space-between;
-        margin: auto;
+        // margin: auto;
+        width: 100%;
     }
 
     .footer__container h1 {
@@ -537,6 +626,7 @@ body {
         height: 32px;
         width: 192px;
         padding-top: 3rem;
+        padding-left: 9rem;
     }
 
     .footer__socialicons img {
@@ -553,8 +643,8 @@ body {
         height: max-content;
         width: max-content;
         //margin-right: 25rem;
-        margin-left: 12rem;
-        margin-right: 3rem;
+        margin-left: 6rem;
+        margin-right: 1rem;
         padding-top: 3rem;
         width: 30rem;
         height: fit-content;
