--- a/styles/partials/_tabletBreakpoint.scss
+++ b/styles/partials/_tabletBreakpoint.scss
@@ -167,10 +167,16 @@
         background-image: url(../assets/Images/hero-shows.jpg);
         background-size:cover;
         height: 65vh;
-        width: 100vw;
+        width: 100%;
         overflow: hidden;
         display: flex;
         flex-direction: column;
+    }
+
+    .hero__img--container img {
+        max-width: 100%;
+        height: auto;
+        width: auto;
     }
 
     .hero__img--container h1 {
@@ -338,6 +344,7 @@
         border: 1px solid map-get($colors, divider__line );
         padding: 1rem;
         box-sizing: border-box;
+        background-color:  map-get($colors , bg__alt--col);
 
         &:active, &:focus { // I think you said you wanted focus as well
             border: 1px solid map-get($colors , bandSite__black );
@@ -373,7 +380,7 @@
     }
         
     .comment__card--item {
-        border-bottom: 1px solid map-get($colors, divider__line);;
+        border-bottom: 1px solid map-get($colors, divider__line);
     }
 
     .user__icon--blank {
@@ -384,13 +391,16 @@
         height: 48px;
         margin: 0;
         order: 1;
-        margin-top:2rem;
+        position: relative;
+        top: 1rem;
     }
+
     .comment__textbox {
         width: 100%;
         border: 1px solid map-get($colors, divider__line );
         padding: 1rem;
         box-sizing: border-box;
+        background-color:  map-get($colors , bg__alt--col);
 
         &:active, &:focus { // I think you said you wanted focus as well
             border: 1px solid map-get($colors , bandSite__black );
@@ -403,6 +413,10 @@
           }
     }
 
+    .comment__textbox:invalid {
+        border: 1px solid red;
+    }
+
     .comment__button {
         height: 40px;
         width: 150px;
@@ -413,6 +427,8 @@
         margin-bottom: 1rem;
         border-radius: 4px;
         float: right;
+        font-weight: 600;
+        cursor: pointer;
 
         &:hover {
             background-color: #000000;
@@ -429,14 +445,18 @@
         order: 4;
         padding-bottom: 1rem;
         margin: 0;
+        font-weight: 400;
     }
 
     .user__name {
         margin: 0;
-        padding-top: 3rem;
+        padding-top: 1rem;
         padding-left: 1rem;
         order: 2;
+        font-size: 0.875rem;
+        line-height: 1.125rem;
     }
+
 
     .timestamp {
         flex: 2 1 auto;
@@ -444,11 +464,13 @@
         width: 2rem;
         height: 2rem;
         color: map-get($colors, cta__text--col);
-        font-size: 0.813rem; /*13px*/
-        padding-top: 3rem;
+        font-size: 0.875rem; /*13px*/
+        padding-top: 1rem;
         float: right;
         order: 3;
         margin: 0;
+        font-weight: 400;
+        line-height: 18px;
     }
     
 
@@ -485,6 +507,14 @@
         border-collapse: collapse;
     }
 
+    .show__table tr:hover {
+        background-color: map-get($colors , bg__alt--col );
+        cursor: pointer;
+        &:active {
+            background-color: map-get($colors , bg__alt--col );
+        }
+    }
+
     .shows__section h1 {
         font-size: 3.75rem; /* 60px */
         line-height: 4.25rem; /* 68px */ 
@@ -516,6 +546,11 @@
         border-radius: 0.25rem; /*4px*/
         border: none;
         font-weight: 800;
+        cursor: pointer;
+        
+        &:hover {
+            background-color: #000000;
+        }
     }
 
     .shows__table--row {
